--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "angular-route": "^1.4.0",
     "jquery": "^2.1.4",
     "materialize-css": "^0.96.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.2.0"
   }
 }
