--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "angular": "^1.4.0",
     "angular-route": "^1.4.0",
     "jquery": "^2.1.4",
-    "materialize-css": "^0.96.1",
-    "underscore": "^1.8.3"
+    "materialize-css": "^0.96.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
